# Altair

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  defs.hpp  eval.hpp  move.cpp  move.hpp  movegenerator.cpp  movegenerator.hpp  moveorderer.cpp  moveorderer.hpp  moveparser.cpp  moveparser.hpp  patterns.cpp  patterns.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  rays.cpp  rays.hpp  search.hpp  transpositiontable.cpp  transpositiontable.hpp  uci.cpp  uci.hpp  utils.hpp
tests/: CMakeLists.txt  bitboard.cpp  helpers.cpp  move.cpp  position.cpp
